[gd_scene load_steps=3 format=3 uid="uid://dgg27s4x2cac3"]

[ext_resource type="Script" uid="uid://bxhdcck7k30f3" path="res://Project/Environment/table.gd" id="1_i5vl2"]
[ext_resource type="PackedScene" uid="uid://clp7lxvtckaky" path="res://Assets/models/Molten Maps SciFi Asset Pack/Assets/gtlf/End_Table.glb" id="3_u7ef4"]

[node name="table_01" type="Node3D" node_paths=PackedStringArray("glas_marker01", "glas_marker02", "glas_marker03", "glas_marker04", "standing_marker01", "standing_marker02", "standing_marker03", "standing_marker04", "LookAt_Marker")]
script = ExtResource("1_i5vl2")
glas_marker01 = NodePath("Glas_Marker01")
glas_marker02 = NodePath("Glas_Marker02")
glas_marker03 = NodePath("Glas_Marker03")
glas_marker04 = NodePath("Glas_Marker04")
standing_marker01 = NodePath("standing_marker01")
standing_marker02 = NodePath("standing_marker02")
standing_marker03 = NodePath("standing_marker03")
standing_marker04 = NodePath("standing_marker04")
LookAt_Marker = NodePath("LookAt_Marker")

[node name="Glas_Marker01" type="Marker3D" parent="." groups=["table_glass_marker"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925, 0.18614358)

[node name="Glas_Marker02" type="Marker3D" parent="." groups=["table_glass_marker"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.111712605, 0.925, -0.0016748011)

[node name="Glas_Marker03" type="Marker3D" parent="." groups=["table_glass_marker"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925, -0.14382866)

[node name="Glas_Marker04" type="Marker3D" parent="." groups=["table_glass_marker"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.13525516, 0.925, 0)

[node name="standing_marker01" type="Marker3D" parent="." groups=["standing_marker"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)

[node name="standing_marker02" type="Marker3D" parent="." groups=["standing_marker"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)

[node name="standing_marker03" type="Marker3D" parent="." groups=["standing_marker"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)

[node name="standing_marker04" type="Marker3D" parent="." groups=["standing_marker"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="SciFi Assets" parent="." instance=ExtResource("3_u7ef4")]

[node name="LookAt_Marker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.952303, 0)

[editable path="SciFi Assets"]
